force-app/main/default/objects/BGR_Media_Properties__c/BGR_Media_Properties__c.object-meta.xml
<CustomObject>
    <label>BGR Media Properties</label>
    <nameField>
        <label>BGR Media Properties</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BGR Media Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>