force-app/main/default/objects/BGR_Media_Properties__c/fields/BoilingPoint__c.field-meta.xml
<CustomField>
    <fullName>BoilingPoint__c</fullName>
    <label>BoilingPoint</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>