force-app/main/default/objects/BGR_Media_Properties__c/fields/FlashPoint__c.field-meta.xml
<CustomField>
    <fullName>FlashPoint__c</fullName>
    <label>FlashPoint :</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>