force-app/main/default/objects/BGR_Media_Properties__c/fields/MediaPhase__c.field-meta.xml
<CustomField>
    <fullName>MediaPhase__c</fullName>
    <label>MediaPhase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>