force-app/main/default/objects/BGR_Media_Properties__c/fields/SpecificHeatRatio__c.field-meta.xml
<CustomField>
    <fullName>SpecificHeatRatio__c</fullName>
    <label>SpecificHeatRatio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>