force-app/main/default/objects/BGR_Media_Properties__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Media__c</columns>
    <columns>MediaPhase__c</columns>
    <columns>SpecificHeatRatio__c</columns>
    <columns>MolecularWeight__c</columns>
    <columns>CompressFactor__c</columns>
    <columns>SpGRelToAir__c</columns>
    <columns>Density__c</columns>
    <columns>BoilingPoint__c</columns>
    <columns>FlashPoint__c</columns>
    <columns>SpGRelToWater__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>